complete/springboot.yaml
---
apiVersion: v1
items:
kind: List
metadata: {}
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: bogije-gs-spring-boot
      chart: bogije-gs-spring-boot-0.0.1
      heritage: Tiller
      release: bogije-gs-spring-boot
    name: bogije-gs-spring-boot
    namespace: __PROJECT__
  spec:
    replicas: 1
    selector:
      deploymentconfig: bogije-gs-spring-boot
    template:
      metadata:
        labels:
          app: bogije-gs-spring-boot
          release: bogije-gs-spring-boot
          deploymentconfig: bogije-gs-spring-boot
          version: v1
      spec:
        imagePullSecrets:
        - name: docker-registry-credentials
        containers:
          - name: bogije-gs-spring-boot
            image: "__IMAGE_TAG__"
            imagePullPolicy: "Always"
            ports:
              - name: http
                containerPort: 8080
                protocol: TCP
            livenessProbe:
              tcpSocket:
                port: http
              initialDelaySeconds: 600
              timeoutSeconds: 60
            readinessProbe:
              tcpSocket:
                port: http
            resources:
              {}

- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: bogije-gs-spring-boot
      chart: bogije-gs-spring-boot-0.0.1
      heritage: Tiller
      release: bogije-gs-spring-boot
      version: v1
    name: bogije-gs-spring-boot
    namespace: __PROJECT__
  spec:
    type: "ClusterIP"
    ports:
      - name: http
        port: 80
        protocol: TCP
        targetPort: 8080
    selector:
      app: bogije-gs-spring-boot
      release: bogije-gs-spring-boot

- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 11m
    labels:
      app: __PROJECT__-bogije-gs-spring-boot
    name: __PROJECT__-bogije-gs-spring-boot
    namespace: istio-system
  spec:
    tls:
    - hosts:
      - "bogije-gs-spring-boot.__PROJECT__.brown.perspectatechdemos.com"
      secretName: "brown-perspectatechdemos-com-crt"
    rules:
    - host: bogije-gs-spring-boot.__PROJECT__.brown.perspectatechdemos.com
      http:
        paths:
        - path: /
          backend:
            serviceName: istio-ingressgateway
            servicePort: 80

- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: bogije-gs-spring-boot
    namespace: __PROJECT__
  spec:
    hosts:
    - "bogije-gs-spring-boot.__PROJECT__.brown.perspectatechdemos.com"
    gateways:
    - __PROJECT__-istio-gateway
    http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: bogije-gs-spring-boot
          port:
            number: 80

- apiVersion: networking.istio.io/v1alpha3
  kind: DestinationRule
  metadata:
    name: bogije-gs-spring-boot
    namespace: __PROJECT__
  spec:
    host: bogije-gs-spring-boot
    subsets:
    - name: v1
      labels:
        version: v1
